; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_eedi2.c_eedi2_filter_map.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_eedi2.c_eedi2_filter_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eedi2_filter_map(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i8*, align 8
  %21 = alloca i8*, align 8
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32* %2, i32** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %30 = load i32*, i32** %13, align 8
  %31 = load i32, i32* %14, align 4
  %32 = load i32*, i32** %11, align 8
  %33 = load i32, i32* %12, align 4
  %34 = load i32, i32* %16, align 4
  %35 = load i32, i32* %15, align 4
  %36 = call i32 @eedi2_bit_blit(i32* %30, i32 %31, i32* %32, i32 %33, i32 %34, i32 %35)
  %37 = load i32, i32* %10, align 4
  %38 = load i32*, i32** %9, align 8
  %39 = sext i32 %37 to i64
  %40 = getelementptr inbounds i32, i32* %38, i64 %39
  store i32* %40, i32** %9, align 8
  %41 = load i32, i32* %12, align 4
  %42 = load i32*, i32** %11, align 8
  %43 = sext i32 %41 to i64
  %44 = getelementptr inbounds i32, i32* %42, i64 %43
  store i32* %44, i32** %11, align 8
  %45 = load i32, i32* %14, align 4
  %46 = load i32*, i32** %13, align 8
  %47 = sext i32 %45 to i64
  %48 = getelementptr inbounds i32, i32* %46, i64 %47
  store i32* %48, i32** %13, align 8
  %49 = load i32*, i32** %11, align 8
  %50 = load i32, i32* %12, align 4
  %51 = sext i32 %50 to i64
  %52 = sub i64 0, %51
  %53 = getelementptr inbounds i32, i32* %49, i64 %52
  %54 = bitcast i32* %53 to i8*
  store i8* %54, i8** %20, align 8
  %55 = load i32*, i32** %11, align 8
  %56 = load i32, i32* %12, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds i32, i32* %55, i64 %57
  %59 = bitcast i32* %58 to i8*
  store i8* %59, i8** %21, align 8
  store i32 1, i32* %18, align 4
  br label %60

60:                                               ; preds = %498, %8
  %61 = load i32, i32* %18, align 4
  %62 = load i32, i32* %15, align 4
  %63 = sub nsw i32 %62, 1
  %64 = icmp slt i32 %61, %63
  br i1 %64, label %65, label %501

65:                                               ; preds = %60
  store i32 1, i32* %17, align 4
  br label %66

66:                                               ; preds = %474, %65
  %67 = load i32, i32* %17, align 4
  %68 = load i32, i32* %16, align 4
  %69 = sub nsw i32 %68, 1
  %70 = icmp slt i32 %67, %69
  br i1 %70, label %71, label %477

71:                                               ; preds = %66
  %72 = load i32*, i32** %11, align 8
  %73 = load i32, i32* %17, align 4
  %74 = sext i32 %73 to i64
  %75 = getelementptr inbounds i32, i32* %72, i64 %74
  %76 = load i32, i32* %75, align 4
  %77 = icmp eq i32 %76, 255
  br i1 %77, label %85, label %78

78:                                               ; preds = %71
  %79 = load i32*, i32** %9, align 8
  %80 = load i32, i32* %17, align 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds i32, i32* %79, i64 %81
  %83 = load i32, i32* %82, align 4
  %84 = icmp ne i32 %83, 255
  br i1 %84, label %85, label %86

85:                                               ; preds = %78, %71
  br label %474

86:                                               ; preds = %78
  %87 = load i32*, i32** %11, align 8
  %88 = load i32, i32* %17, align 4
  %89 = sext i32 %88 to i64
  %90 = getelementptr inbounds i32, i32* %87, i64 %89
  %91 = load i32, i32* %90, align 4
  %92 = sub nsw i32 %91, 128
  %93 = ashr i32 %92, 2
  store i32 %93, i32* %22, align 4
  %94 = load i32, i32* %22, align 4
  %95 = call i32 @abs(i32 %94)
  %96 = mul nsw i32 %95, 2
  %97 = call i32 @MAX(i32 %96, i32 12)
  store i32 %97, i32* %23, align 4
  store i32 0, i32* %24, align 4
  store i32 0, i32* %25, align 4
  %98 = load i32, i32* %22, align 4
  %99 = icmp slt i32 %98, 0
  br i1 %99, label %100, label %188

100:                                              ; preds = %86
  %101 = load i32, i32* %17, align 4
  %102 = sub nsw i32 0, %101
  %103 = load i32, i32* %22, align 4
  %104 = call i32 @MAX(i32 %102, i32 %103)
  store i32 %104, i32* %26, align 4
  %105 = load i32, i32* %26, align 4
  store i32 %105, i32* %19, align 4
  br label %106

106:                                              ; preds = %184, %100
  %107 = load i32, i32* %19, align 4
  %108 = icmp sle i32 %107, 0
  br i1 %108, label %109, label %187

109:                                              ; preds = %106
  %110 = load i8*, i8** %20, align 8
  %111 = load i32, i32* %17, align 4
  %112 = load i32, i32* %19, align 4
  %113 = add nsw i32 %111, %112
  %114 = sext i32 %113 to i64
  %115 = getelementptr inbounds i8, i8* %110, i64 %114
  %116 = load i8, i8* %115, align 1
  %117 = zext i8 %116 to i32
  %118 = load i32*, i32** %11, align 8
  %119 = load i32, i32* %17, align 4
  %120 = sext i32 %119 to i64
  %121 = getelementptr inbounds i32, i32* %118, i64 %120
  %122 = load i32, i32* %121, align 4
  %123 = sub nsw i32 %117, %122
  %124 = call i32 @abs(i32 %123)
  %125 = load i32, i32* %23, align 4
  %126 = icmp sgt i32 %124, %125
  br i1 %126, label %127, label %137

127:                                              ; preds = %109
  %128 = load i8*, i8** %20, align 8
  %129 = load i32, i32* %17, align 4
  %130 = load i32, i32* %19, align 4
  %131 = add nsw i32 %129, %130
  %132 = sext i32 %131 to i64
  %133 = getelementptr inbounds i8, i8* %128, i64 %132
  %134 = load i8, i8* %133, align 1
  %135 = zext i8 %134 to i32
  %136 = icmp ne i32 %135, 255
  br i1 %136, label %182, label %137

137:                                              ; preds = %127, %109
  %138 = load i32*, i32** %11, align 8
  %139 = load i32, i32* %17, align 4
  %140 = load i32, i32* %19, align 4
  %141 = add nsw i32 %139, %140
  %142 = sext i32 %141 to i64
  %143 = getelementptr inbounds i32, i32* %138, i64 %142
  %144 = load i32, i32* %143, align 4
  %145 = icmp eq i32 %144, 255
  br i1 %145, label %146, label %156

146:                                              ; preds = %137
  %147 = load i8*, i8** %20, align 8
  %148 = load i32, i32* %17, align 4
  %149 = load i32, i32* %19, align 4
  %150 = add nsw i32 %148, %149
  %151 = sext i32 %150 to i64
  %152 = getelementptr inbounds i8, i8* %147, i64 %151
  %153 = load i8, i8* %152, align 1
  %154 = zext i8 %153 to i32
  %155 = icmp eq i32 %154, 255
  br i1 %155, label %182, label %156

156:                                              ; preds = %146, %137
  %157 = load i32*, i32** %11, align 8
  %158 = load i32, i32* %17, align 4
  %159 = load i32, i32* %19, align 4
  %160 = add nsw i32 %158, %159
  %161 = sext i32 %160 to i64
  %162 = getelementptr inbounds i32, i32* %157, i64 %161
  %163 = load i32, i32* %162, align 4
  %164 = load i32*, i32** %11, align 8
  %165 = load i32, i32* %17, align 4
  %166 = sext i32 %165 to i64
  %167 = getelementptr inbounds i32, i32* %164, i64 %166
  %168 = load i32, i32* %167, align 4
  %169 = sub nsw i32 %163, %168
  %170 = call i32 @abs(i32 %169)
  %171 = load i32, i32* %23, align 4
  %172 = icmp sgt i32 %170, %171
  br i1 %172, label %173, label %183

173:                                              ; preds = %156
  %174 = load i32*, i32** %11, align 8
  %175 = load i32, i32* %17, align 4
  %176 = load i32, i32* %19, align 4
  %177 = add nsw i32 %175, %176
  %178 = sext i32 %177 to i64
  %179 = getelementptr inbounds i32, i32* %174, i64 %178
  %180 = load i32, i32* %179, align 4
  %181 = icmp ne i32 %180, 255
  br i1 %181, label %182, label %183

182:                                              ; preds = %173, %146, %127
  store i32 1, i32* %24, align 4
  br label %187

183:                                              ; preds = %173, %156
  br label %184

184:                                              ; preds = %183
  %185 = load i32, i32* %19, align 4
  %186 = add nsw i32 %185, 1
  store i32 %186, i32* %19, align 4
  br label %106

187:                                              ; preds = %182, %106
  br label %278

188:                                              ; preds = %86
  %189 = load i32, i32* %16, align 4
  %190 = load i32, i32* %17, align 4
  %191 = sub nsw i32 %189, %190
  %192 = sub nsw i32 %191, 1
  %193 = load i32, i32* %22, align 4
  %194 = call i32 @MIN(i32 %192, i32 %193)
  store i32 %194, i32* %27, align 4
  store i32 0, i32* %19, align 4
  br label %195

195:                                              ; preds = %274, %188
  %196 = load i32, i32* %19, align 4
  %197 = load i32, i32* %27, align 4
  %198 = icmp sle i32 %196, %197
  br i1 %198, label %199, label %277

199:                                              ; preds = %195
  %200 = load i8*, i8** %20, align 8
  %201 = load i32, i32* %17, align 4
  %202 = load i32, i32* %19, align 4
  %203 = add nsw i32 %201, %202
  %204 = sext i32 %203 to i64
  %205 = getelementptr inbounds i8, i8* %200, i64 %204
  %206 = load i8, i8* %205, align 1
  %207 = zext i8 %206 to i32
  %208 = load i32*, i32** %11, align 8
  %209 = load i32, i32* %17, align 4
  %210 = sext i32 %209 to i64
  %211 = getelementptr inbounds i32, i32* %208, i64 %210
  %212 = load i32, i32* %211, align 4
  %213 = sub nsw i32 %207, %212
  %214 = call i32 @abs(i32 %213)
  %215 = load i32, i32* %23, align 4
  %216 = icmp sgt i32 %214, %215
  br i1 %216, label %217, label %227

217:                                              ; preds = %199
  %218 = load i8*, i8** %20, align 8
  %219 = load i32, i32* %17, align 4
  %220 = load i32, i32* %19, align 4
  %221 = add nsw i32 %219, %220
  %222 = sext i32 %221 to i64
  %223 = getelementptr inbounds i8, i8* %218, i64 %222
  %224 = load i8, i8* %223, align 1
  %225 = zext i8 %224 to i32
  %226 = icmp ne i32 %225, 255
  br i1 %226, label %272, label %227

227:                                              ; preds = %217, %199
  %228 = load i32*, i32** %11, align 8
  %229 = load i32, i32* %17, align 4
  %230 = load i32, i32* %19, align 4
  %231 = add nsw i32 %229, %230
  %232 = sext i32 %231 to i64
  %233 = getelementptr inbounds i32, i32* %228, i64 %232
  %234 = load i32, i32* %233, align 4
  %235 = icmp eq i32 %234, 255
  br i1 %235, label %236, label %246

236:                                              ; preds = %227
  %237 = load i8*, i8** %20, align 8
  %238 = load i32, i32* %17, align 4
  %239 = load i32, i32* %19, align 4
  %240 = add nsw i32 %238, %239
  %241 = sext i32 %240 to i64
  %242 = getelementptr inbounds i8, i8* %237, i64 %241
  %243 = load i8, i8* %242, align 1
  %244 = zext i8 %243 to i32
  %245 = icmp eq i32 %244, 255
  br i1 %245, label %272, label %246

246:                                              ; preds = %236, %227
  %247 = load i32*, i32** %11, align 8
  %248 = load i32, i32* %17, align 4
  %249 = load i32, i32* %19, align 4
  %250 = add nsw i32 %248, %249
  %251 = sext i32 %250 to i64
  %252 = getelementptr inbounds i32, i32* %247, i64 %251
  %253 = load i32, i32* %252, align 4
  %254 = load i32*, i32** %11, align 8
  %255 = load i32, i32* %17, align 4
  %256 = sext i32 %255 to i64
  %257 = getelementptr inbounds i32, i32* %254, i64 %256
  %258 = load i32, i32* %257, align 4
  %259 = sub nsw i32 %253, %258
  %260 = call i32 @abs(i32 %259)
  %261 = load i32, i32* %23, align 4
  %262 = icmp sgt i32 %260, %261
  br i1 %262, label %263, label %273

263:                                              ; preds = %246
  %264 = load i32*, i32** %11, align 8
  %265 = load i32, i32* %17, align 4
  %266 = load i32, i32* %19, align 4
  %267 = add nsw i32 %265, %266
  %268 = sext i32 %267 to i64
  %269 = getelementptr inbounds i32, i32* %264, i64 %268
  %270 = load i32, i32* %269, align 4
  %271 = icmp ne i32 %270, 255
  br i1 %271, label %272, label %273

272:                                              ; preds = %263, %236, %217
  store i32 1, i32* %24, align 4
  br label %277

273:                                              ; preds = %263, %246
  br label %274

274:                                              ; preds = %273
  %275 = load i32, i32* %19, align 4
  %276 = add nsw i32 %275, 1
  store i32 %276, i32* %19, align 4
  br label %195

277:                                              ; preds = %272, %195
  br label %278

278:                                              ; preds = %277, %187
  %279 = load i32, i32* %24, align 4
  %280 = icmp ne i32 %279, 0
  br i1 %280, label %281, label %473

281:                                              ; preds = %278
  %282 = load i32, i32* %22, align 4
  %283 = icmp slt i32 %282, 0
  br i1 %283, label %284, label %375

284:                                              ; preds = %281
  %285 = load i32, i32* %16, align 4
  %286 = load i32, i32* %17, align 4
  %287 = sub nsw i32 %285, %286
  %288 = sub nsw i32 %287, 1
  %289 = load i32, i32* %22, align 4
  %290 = call i32 @abs(i32 %289)
  %291 = call i32 @MIN(i32 %288, i32 %290)
  store i32 %291, i32* %28, align 4
  store i32 0, i32* %19, align 4
  br label %292

292:                                              ; preds = %371, %284
  %293 = load i32, i32* %19, align 4
  %294 = load i32, i32* %28, align 4
  %295 = icmp sle i32 %293, %294
  br i1 %295, label %296, label %374

296:                                              ; preds = %292
  %297 = load i8*, i8** %21, align 8
  %298 = load i32, i32* %17, align 4
  %299 = load i32, i32* %19, align 4
  %300 = add nsw i32 %298, %299
  %301 = sext i32 %300 to i64
  %302 = getelementptr inbounds i8, i8* %297, i64 %301
  %303 = load i8, i8* %302, align 1
  %304 = zext i8 %303 to i32
  %305 = load i32*, i32** %11, align 8
  %306 = load i32, i32* %17, align 4
  %307 = sext i32 %306 to i64
  %308 = getelementptr inbounds i32, i32* %305, i64 %307
  %309 = load i32, i32* %308, align 4
  %310 = sub nsw i32 %304, %309
  %311 = call i32 @abs(i32 %310)
  %312 = load i32, i32* %23, align 4
  %313 = icmp sgt i32 %311, %312
  br i1 %313, label %314, label %324

314:                                              ; preds = %296
  %315 = load i8*, i8** %21, align 8
  %316 = load i32, i32* %17, align 4
  %317 = load i32, i32* %19, align 4
  %318 = add nsw i32 %316, %317
  %319 = sext i32 %318 to i64
  %320 = getelementptr inbounds i8, i8* %315, i64 %319
  %321 = load i8, i8* %320, align 1
  %322 = zext i8 %321 to i32
  %323 = icmp ne i32 %322, 255
  br i1 %323, label %369, label %324

324:                                              ; preds = %314, %296
  %325 = load i8*, i8** %21, align 8
  %326 = load i32, i32* %17, align 4
  %327 = load i32, i32* %19, align 4
  %328 = add nsw i32 %326, %327
  %329 = sext i32 %328 to i64
  %330 = getelementptr inbounds i8, i8* %325, i64 %329
  %331 = load i8, i8* %330, align 1
  %332 = zext i8 %331 to i32
  %333 = icmp eq i32 %332, 255
  br i1 %333, label %334, label %343

334:                                              ; preds = %324
  %335 = load i32*, i32** %11, align 8
  %336 = load i32, i32* %17, align 4
  %337 = load i32, i32* %19, align 4
  %338 = add nsw i32 %336, %337
  %339 = sext i32 %338 to i64
  %340 = getelementptr inbounds i32, i32* %335, i64 %339
  %341 = load i32, i32* %340, align 4
  %342 = icmp eq i32 %341, 255
  br i1 %342, label %369, label %343

343:                                              ; preds = %334, %324
  %344 = load i32*, i32** %11, align 8
  %345 = load i32, i32* %17, align 4
  %346 = load i32, i32* %19, align 4
  %347 = add nsw i32 %345, %346
  %348 = sext i32 %347 to i64
  %349 = getelementptr inbounds i32, i32* %344, i64 %348
  %350 = load i32, i32* %349, align 4
  %351 = load i32*, i32** %11, align 8
  %352 = load i32, i32* %17, align 4
  %353 = sext i32 %352 to i64
  %354 = getelementptr inbounds i32, i32* %351, i64 %353
  %355 = load i32, i32* %354, align 4
  %356 = sub nsw i32 %350, %355
  %357 = call i32 @abs(i32 %356)
  %358 = load i32, i32* %23, align 4
  %359 = icmp sgt i32 %357, %358
  br i1 %359, label %360, label %370

360:                                              ; preds = %343
  %361 = load i32*, i32** %11, align 8
  %362 = load i32, i32* %17, align 4
  %363 = load i32, i32* %19, align 4
  %364 = add nsw i32 %362, %363
  %365 = sext i32 %364 to i64
  %366 = getelementptr inbounds i32, i32* %361, i64 %365
  %367 = load i32, i32* %366, align 4
  %368 = icmp ne i32 %367, 255
  br i1 %368, label %369, label %370

369:                                              ; preds = %360, %334, %314
  store i32 1, i32* %25, align 4
  br label %374

370:                                              ; preds = %360, %343
  br label %371

371:                                              ; preds = %370
  %372 = load i32, i32* %19, align 4
  %373 = add nsw i32 %372, 1
  store i32 %373, i32* %19, align 4
  br label %292

374:                                              ; preds = %369, %292
  br label %464

375:                                              ; preds = %281
  %376 = load i32, i32* %17, align 4
  %377 = sub nsw i32 0, %376
  %378 = load i32, i32* %22, align 4
  %379 = sub nsw i32 0, %378
  %380 = call i32 @MAX(i32 %377, i32 %379)
  store i32 %380, i32* %29, align 4
  %381 = load i32, i32* %29, align 4
  store i32 %381, i32* %19, align 4
  br label %382

382:                                              ; preds = %460, %375
  %383 = load i32, i32* %19, align 4
  %384 = icmp sle i32 %383, 0
  br i1 %384, label %385, label %463

385:                                              ; preds = %382
  %386 = load i8*, i8** %21, align 8
  %387 = load i32, i32* %17, align 4
  %388 = load i32, i32* %19, align 4
  %389 = add nsw i32 %387, %388
  %390 = sext i32 %389 to i64
  %391 = getelementptr inbounds i8, i8* %386, i64 %390
  %392 = load i8, i8* %391, align 1
  %393 = zext i8 %392 to i32
  %394 = load i32*, i32** %11, align 8
  %395 = load i32, i32* %17, align 4
  %396 = sext i32 %395 to i64
  %397 = getelementptr inbounds i32, i32* %394, i64 %396
  %398 = load i32, i32* %397, align 4
  %399 = sub nsw i32 %393, %398
  %400 = call i32 @abs(i32 %399)
  %401 = load i32, i32* %23, align 4
  %402 = icmp sgt i32 %400, %401
  br i1 %402, label %403, label %413

403:                                              ; preds = %385
  %404 = load i8*, i8** %21, align 8
  %405 = load i32, i32* %17, align 4
  %406 = load i32, i32* %19, align 4
  %407 = add nsw i32 %405, %406
  %408 = sext i32 %407 to i64
  %409 = getelementptr inbounds i8, i8* %404, i64 %408
  %410 = load i8, i8* %409, align 1
  %411 = zext i8 %410 to i32
  %412 = icmp ne i32 %411, 255
  br i1 %412, label %458, label %413

413:                                              ; preds = %403, %385
  %414 = load i8*, i8** %21, align 8
  %415 = load i32, i32* %17, align 4
  %416 = load i32, i32* %19, align 4
  %417 = add nsw i32 %415, %416
  %418 = sext i32 %417 to i64
  %419 = getelementptr inbounds i8, i8* %414, i64 %418
  %420 = load i8, i8* %419, align 1
  %421 = zext i8 %420 to i32
  %422 = icmp eq i32 %421, 255
  br i1 %422, label %423, label %432

423:                                              ; preds = %413
  %424 = load i32*, i32** %11, align 8
  %425 = load i32, i32* %17, align 4
  %426 = load i32, i32* %19, align 4
  %427 = add nsw i32 %425, %426
  %428 = sext i32 %427 to i64
  %429 = getelementptr inbounds i32, i32* %424, i64 %428
  %430 = load i32, i32* %429, align 4
  %431 = icmp eq i32 %430, 255
  br i1 %431, label %458, label %432

432:                                              ; preds = %423, %413
  %433 = load i32*, i32** %11, align 8
  %434 = load i32, i32* %17, align 4
  %435 = load i32, i32* %19, align 4
  %436 = add nsw i32 %434, %435
  %437 = sext i32 %436 to i64
  %438 = getelementptr inbounds i32, i32* %433, i64 %437
  %439 = load i32, i32* %438, align 4
  %440 = load i32*, i32** %11, align 8
  %441 = load i32, i32* %17, align 4
  %442 = sext i32 %441 to i64
  %443 = getelementptr inbounds i32, i32* %440, i64 %442
  %444 = load i32, i32* %443, align 4
  %445 = sub nsw i32 %439, %444
  %446 = call i32 @abs(i32 %445)
  %447 = load i32, i32* %23, align 4
  %448 = icmp sgt i32 %446, %447
  br i1 %448, label %449, label %459

449:                                              ; preds = %432
  %450 = load i32*, i32** %11, align 8
  %451 = load i32, i32* %17, align 4
  %452 = load i32, i32* %19, align 4
  %453 = add nsw i32 %451, %452
  %454 = sext i32 %453 to i64
  %455 = getelementptr inbounds i32, i32* %450, i64 %454
  %456 = load i32, i32* %455, align 4
  %457 = icmp ne i32 %456, 255
  br i1 %457, label %458, label %459

458:                                              ; preds = %449, %423, %403
  store i32 1, i32* %25, align 4
  br label %463

459:                                              ; preds = %449, %432
  br label %460

460:                                              ; preds = %459
  %461 = load i32, i32* %19, align 4
  %462 = add nsw i32 %461, 1
  store i32 %462, i32* %19, align 4
  br label %382

463:                                              ; preds = %458, %382
  br label %464

464:                                              ; preds = %463, %374
  %465 = load i32, i32* %25, align 4
  %466 = icmp ne i32 %465, 0
  br i1 %466, label %467, label %472

467:                                              ; preds = %464
  %468 = load i32*, i32** %13, align 8
  %469 = load i32, i32* %17, align 4
  %470 = sext i32 %469 to i64
  %471 = getelementptr inbounds i32, i32* %468, i64 %470
  store i32 255, i32* %471, align 4
  br label %472

472:                                              ; preds = %467, %464
  br label %473

473:                                              ; preds = %472, %278
  br label %474

474:                                              ; preds = %473, %85
  %475 = load i32, i32* %17, align 4
  %476 = add nsw i32 %475, 1
  store i32 %476, i32* %17, align 4
  br label %66

477:                                              ; preds = %66
  %478 = load i32, i32* %10, align 4
  %479 = load i32*, i32** %9, align 8
  %480 = sext i32 %478 to i64
  %481 = getelementptr inbounds i32, i32* %479, i64 %480
  store i32* %481, i32** %9, align 8
  %482 = load i32, i32* %12, align 4
  %483 = load i8*, i8** %20, align 8
  %484 = sext i32 %482 to i64
  %485 = getelementptr inbounds i8, i8* %483, i64 %484
  store i8* %485, i8** %20, align 8
  %486 = load i32, i32* %12, align 4
  %487 = load i32*, i32** %11, align 8
  %488 = sext i32 %486 to i64
  %489 = getelementptr inbounds i32, i32* %487, i64 %488
  store i32* %489, i32** %11, align 8
  %490 = load i32, i32* %12, align 4
  %491 = load i8*, i8** %21, align 8
  %492 = sext i32 %490 to i64
  %493 = getelementptr inbounds i8, i8* %491, i64 %492
  store i8* %493, i8** %21, align 8
  %494 = load i32, i32* %14, align 4
  %495 = load i32*, i32** %13, align 8
  %496 = sext i32 %494 to i64
  %497 = getelementptr inbounds i32, i32* %495, i64 %496
  store i32* %497, i32** %13, align 8
  br label %498

498:                                              ; preds = %477
  %499 = load i32, i32* %18, align 4
  %500 = add nsw i32 %499, 1
  store i32 %500, i32* %18, align 4
  br label %60

501:                                              ; preds = %60
  ret void
}

declare dso_local i32 @eedi2_bit_blit(i32*, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @MAX(i32, i32) #1

declare dso_local i32 @abs(i32) #1

declare dso_local i32 @MIN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
